# functional-data-structures

./: .travis.yml  README.md  functionaldatastructures.cabal  stack.yml
spec/: AmortizedQueueSpec.hs  BankersQueueSpec.hs  BinarySearchTreeSpec.hs  BinomialHeapSpec.hs  DequeSpec.hs  HelloSpec.hs  LeftistHeapSpec.hs  ListSpec.hs  QueueSpec.hs  RedBlackTreeSpec.hs  Spec.hs  TrieSpec.hs
src/: AmortizedQueue.hs  BankersQueue.hs  BinarySearchTree.hs  BinomialHeap.hs  Deque.hs  Hello.hs  LeftistHeap.hs  List.hs  Queue.hs  RedBlackTree.hs  Trie.hs
