name:                functionaldatastructures
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tejasbubane/functional-data-structures#readme
author:              Tejas Bubane
maintainer:          tejasbubane@gmail.com
copyright:           2018-2019 Tejas Bubane
category:            data-structures
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src, spec
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , checkers
                     , containers
  exposed-modules:     List
                     , BinarySearchTree
                     , LeftistHeap
                     , BinomialHeap
                     , RedBlackTree
                     , Queue
                     , BankersQueue
                     , Deque
                     , Trie
  other-modules:       ListSpec
                     , BinarySearchTreeSpec
                     , LeftistHeapSpec
                     , BinomialHeapSpec
                     , RedBlackTreeSpec
                     , QueueSpec
                     , BankersQueueSpec
                     , DequeSpec
                     , TrieSpec

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec, src
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , checkers
                     , containers
  other-modules:       List
                     , ListSpec
                     , BinarySearchTree
                     , BinarySearchTreeSpec
                     , LeftistHeap
                     , LeftistHeapSpec
                     , BinomialHeap
                     , BinomialHeapSpec
                     , RedBlackTree
                     , RedBlackTreeSpec
                     , Queue
                     , QueueSpec
                     , BankersQueue
                     , BankersQueueSpec
                     , Deque
                     , DequeSpec
                     , Trie
                     , TrieSpec
